<resources>
    <string name="app_name">YA_WYE</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="textFirstName">First Name</string>
    <string name="textLastName">Last Name</string>
    <string name="textAge">Age</string>
    <string name="textSex">Sex</string>
    <string name="textPostcode">Postcode</string>
    <string name="radioMale">Male</string>
    <string name="radioFemale">Female</string>
    <string name="splashContent">SplashScreen</string>
    <string name="textCity">City</string>
    <string name="welcomeText">Welcome!</string>
    <string name="buttonLogin">Login</string>
    <string name="btnCreateAccount">Create Account</string>
    <string name="buttonAddData">Add User Data</string>
    <string name="buttonViewAll">View All</string>
    <string name="textPassword">Password</string>
    <string name="textEmail">Email</string>

    <string name="app_name1">Login Register</string>
    <string name="text_accounts">All Accounts</string>
    <string name="hint_name">Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="text_login">Login</string>
    <string name="text_register">Register</string>
    <string name="error_message_name">Enter Full Name</string>
    <string name="error_message_email">Enter Valid Email</string>
    <string name="error_message_age">Enter Age</string>
    <string name="error_message_password">Enter Password</string>
    <string name="success_message">Registration Successful</string>
    <string name="text_not_member">No account yet? Create one</string>
    <string name="text_already_member">Already a member? Login</string>
    <string name="error_email_exists">Email Already Exists</string>
    <string name="error_password_match">Password Does Not Match</string>
    <string name="error_valid_email_password">Wrong Email or Password</string>
    <string name="action_settings">Settings</string>
    <string name="text_hello">Hello,</string>
    <string name="text_title">Accounts List</string>
    <string name="text_add">Add</string>

</resources>
